--- a/Capstone/Capstone.csproj
+++ b/Capstone/Capstone.csproj
@@ -43,6 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BeverageItem.cs" />
+    <Compile Include="Classes\CandyItem.cs" />
+    <Compile Include="Classes\Change.cs" />
+    <Compile Include="Classes\ChipItem.cs" />
+    <Compile Include="Classes\GumItem.cs" />
+    <Compile Include="Classes\InventoryFileDAL.cs" />
+    <Compile Include="Classes\VendingMachine.cs" />
+    <Compile Include="Classes\VendingMachineItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -50,7 +58,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Classes\" />
+    <Content Include="vendingmachineInventory.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
