--- a/CapstoneTests/CapstoneTests.csproj
+++ b/CapstoneTests/CapstoneTests.csproj
@@ -52,6 +52,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ChangeTests.cs" />
+    <Compile Include="InventoryFileDALTests.cs" />
+    <Compile Include="VendingMachineTests.cs" />
+    <Compile Include="VendingMachineItemTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Capstone\Capstone.csproj">
