--- a/Capstone/Capstone.csproj
+++ b/Capstone/Capstone.csproj
@@ -49,8 +49,13 @@
     <Compile Include="Classes\ChipItem.cs" />
     <Compile Include="Classes\GumItem.cs" />
     <Compile Include="Classes\InventoryFileDAL.cs" />
+    <Compile Include="Classes\TransactionFileLog.cs" />
     <Compile Include="Classes\VendingMachine.cs" />
     <Compile Include="Classes\VendingMachineCLI.cs" />
+    <Compile Include="Exceptions\InsufficientFundsException.cs" />
+    <Compile Include="Exceptions\InvalidSlotIDException.cs" />
+    <Compile Include="Exceptions\OutOfStockException.cs" />
+    <Compile Include="Exceptions\VendingMachineException.cs" />
     <Compile Include="Classes\VendingMachineItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
